# pyoperon

./: pyproject.toml
