[project]
build = "build.py"
name = "pyoperon"
version = "0.3.4"
description = "Scikit-learn module and python bindings and for the Operon library"
readme = "README.md"
repository = "https://github.com/heal-research/pyoperon"
homepage = "https://github.com/heal-research/pyoperon"
license = "MIT"
authors = ["Bogdan Burlacu <bogdan.burlacu@pm.me>"]
