[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"
# Ignore flat-layout.

[tool.setuptools]
py_modules = []

[project]
build = "build.py"
name = "pyoperon"
version = "0.3.4"
description = "Scikit-learn module and python bindings and for the Operon library"
readme = "README.md"
license = {file = "LICENSE.md"}
